--- a/package.json
+++ b/package.json
@@ -38,12 +38,15 @@
     "@typescript-eslint/parser": "^5.59.5",
     "@vitejs/plugin-react": "^2.2.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "2.8.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
