--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
       "@components/*": ["src/components/*"] //@components로 시작하면 components/ 하위 디렉토리를 의미한다.
     }
   },
-  "include": ["src","postcss.config.cjs", "tailwind.config.cjs"],
+  "include": ["src","postcss.config.cjs", "tailwind.config.cjs","vite.config.ts",".eslintrc.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
