fix: path, indexcss

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^20.1.4",
     "@types/react-canvas-draw": "^1.2.0",
     "@types/react-lottie": "^1.2.6",
     "autoprefixer": "^10.4.14",
