--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
+    "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
     "tailwindcss": "^3.3.2",
     "vite-tsconfig-paths": "^4.2.0"
