--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^8.40.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jwt-decode": "^3.1.2",
+    "konva": "^9.0.2",
     "postcss": "^8.4.23",
     "postcss-nesting": "^11.2.2",
     "react": "^18.2.0",
@@ -27,6 +28,7 @@
     "react-colorful": "^5.6.1",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-konva": "^18.2.8",
     "react-router-dom": "^6.8.0",
     "recoil": "^0.7.7",
     "tailwindcss": "^3.3.2",
