--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.8",
     "react-router-dom": "^6.8.0",
+    "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
     "tailwindcss": "^3.3.2",
     "vite-tsconfig-paths": "^4.2.0"
