--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
     "tailwindcss": "^3.3.2",
+    "use-image": "^1.1.0",
     "vite-tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
