feat: 카카오톡 공유하기

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,16 @@
       "@components/*": ["src/components/*"] //@components로 시작하면 components/ 하위 디렉토리를 의미한다.
     }
   },
-  "include": ["src","postcss.config.cjs", "tailwind.config.cjs","vite.config.ts",".eslintrc.js","src/**/*","**/*.json"],
+  "include": [
+    "src",
+    "postcss.config.cjs",
+    "tailwind.config.cjs",
+    "vite.config.ts",
+    ".eslintrc.js",
+    "src/**/*",
+    "**/*.json",
+    "react-app-env.d.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }],
   "exclude": ["node_modules", "./public/"]
 }
