--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.2",
     "browser-image-compression": "^2.0.2",
+    "buffer": "^6.0.3",
     "daisyui": "^2.51.6",
     "eslint": "^8.40.0",
     "eslint-plugin-prettier": "^4.2.1",
