--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^6.8.0",
     "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
+    "serve": "^14.2.0",
     "tailwindcss": "^3.3.2",
     "use-image": "^1.1.0",
     "vite-tsconfig-paths": "^4.2.0"
