--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-konva": "^18.2.8",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^6.8.0",
     "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
