--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-intersection-observer": "^9.4.3",
     "react-konva": "^18.2.8",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.8.0",
